--- a/.dockerignore
+++ b/.dockerignore
@@ -23,3 +23,79 @@ logs/
 .vscode/
 .DS_Store
 
+# Byte-compiled / optimized / DLL files
+**/__pycache__/
+**/*.py[cod]
+**/*$py.class
+
+# Distribution / packaging
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# PyInstaller
+*.manifest
+*.spec
+
+# Installer logs
+pip-log.txt
+pip-delete-this-directory.txt
+
+# Unit test / coverage reports
+htmlcov/
+.tox/
+nosetests.xml
+coverage.xml
+*.cover
+.hypothesis/
+.pytest_cache/
+
+# Django stuff:
+*.log
+local_settings.py
+db.sqlite3
+
+# Flask stuff:
+instance/
+.webassets-cache
+
+# Scrapy stuff:
+.scrapy
+
+# Sphinx documentation
+_docs/_build
+
+# PyBuilder
+target/
+
+# Jupyter Notebook
+deployment/
+**/.ipynb_checkpoints
+
+# pyenv
+.python-version
+
+# pipenv
+dev.env
+
+# envs
+.env*
+!.env.example
+*.env.local
+
+**/.DS_Store
+**/.vscode
+runtime/
+!.streamlit/config.toml
