웹UI (스트림릿) 히스토리 관리 및 UI런타임 오류 수정 #6

--- a/.dockerignore
+++ b/.dockerignore
@@ -18,6 +18,9 @@ venv/
 runtime/
 logs/
 
+# 허용해야 하는 스크립트 (gcs_sync.py) 제외
+!/scripts/gcs_sync.py
+
 # IDE / editor
 .idea/
 .vscode/
@@ -94,6 +97,9 @@ dev.env
 .env*
 !.env.example
 *.env.local
+
+# Cloud deploy helper scripts 제외 (이미 허용됨)
+!/scripts/gcs_sync.py
 
 **/.DS_Store
 **/.vscode
